japanization of home page

--- a/DPTnew/DPTnew/Localization/Resource.resx
+++ b/DPTnew/DPTnew/Localization/Resource.resx
@@ -178,7 +178,7 @@
     <value>All you need to know about C2V, V2C and Floating Licensing.</value>
   </data>
   <data name="View_Home_Subtitle" xml:space="preserve">
-    <value>This is the new site to manage your licenses.</value>
+    <value>Welcome to the new Customer Care portal!</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
     <value>ThinkDesign 2016 beta is now available! Have a look at the Download section.</value>
@@ -214,7 +214,7 @@
     <value>All Licenses</value>
   </data>
   <data name="View_Menu_AllPeoples" xml:space="preserve">
-    <value>All Peoples</value>
+    <value>All People</value>
   </data>
   <data name="View_Menu_Download" xml:space="preserve">
     <value>Download</value>
@@ -227,5 +227,8 @@
   </data>
   <data name="View_Menu_Orders" xml:space="preserve">
     <value>Orders</value>
+  </data>
+  <data name="View_HomeIndex_of" xml:space="preserve">
+    <value>of</value>
   </data>
 </root>
