--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -121,10 +121,10 @@
     <value>Conferma nuova password</value>
   </data>
   <data name="ConfirmPassword" xml:space="preserve">
-    <value>Password attuale e conferma della password non corrispondono.</value>
+    <value>Le due Password non coincidono.</value>
   </data>
   <data name="LengthPassword" xml:space="preserve">
-    <value>La {0} deve essere lenga almeno {2} caratteri.</value>
+    <value>La {0} deve essere lunga almeno {2} caratteri.</value>
   </data>
   <data name="LoggedIn" xml:space="preserve">
     <value>Sei connesso come</value>
@@ -150,62 +150,65 @@
   <data name="View_HomeIndex_Logoff" xml:space="preserve">
     <value>Disconnetti</value>
   </data>
+  <data name="View_HomeIndex_of" xml:space="preserve">
+    <value>di</value>
+  </data>
   <data name="View_HomeIndex_Title" xml:space="preserve">
     <value>Customer Care</value>
   </data>
   <data name="View_Home_BreakingNews" xml:space="preserve">
-    <value>Novitá</value>
+    <value>Novità</value>
   </data>
   <data name="View_Home_CaseManagement" xml:space="preserve">
     <value>Gestione Casi</value>
   </data>
   <data name="View_Home_CaseManagement_Text1" xml:space="preserve">
-    <value>Contatta il nostro Customer Care e apri un nuovo caso.</value>
+    <value>Contatta il nostro Customer Care.</value>
   </data>
   <data name="View_Home_CaseManagement_Text2" xml:space="preserve">
-    <value>Utilizza le vecchie credenziali per accedere a questa sezione.</value>
+    <value>Ricordati di utilizzare le tue vecchie credenziali per accedere a questa sezione.</value>
   </data>
   <data name="View_Home_ELearning" xml:space="preserve">
-    <value>Apprendimento digitale</value>
+    <value>e-Learning</value>
   </data>
   <data name="View_Home_ELearning_Text" xml:space="preserve">
-    <value>Materiale su apprendimento del Software, come video e tutorials passo a passo, fornito tramite web.</value>
+    <value>Materiale di formazione sul software, come video ed esercizi guidati, accessibile all'utente via internet.</value>
   </data>
   <data name="View_Home_NewLicensing" xml:space="preserve">
-    <value>Nuove Licenze</value>
+    <value>Nuovo Licensing</value>
   </data>
   <data name="View_Home_NewLicensing_Text" xml:space="preserve">
-    <value>Tutto quello che devi sapere su C2V, V2C e license Floating.</value>
+    <value>Tutto quello che devi sapere su C2V, V2C e licenze floating.</value>
   </data>
   <data name="View_Home_Subtitle" xml:space="preserve">
-    <value>Questo é il nuovo sito per la gestione delle licenze.</value>
+    <value>Benvenuto nel nuovo portale del Customer Care!</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>E' disponibile ThinkDesign 2016 beta! Visita la sezione di Scarica.</value>
+    <value>ThinkDesign 2016 beta è stata rilasciata ed è ora disponibile nella sezione di Download.</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
-    <value>Prova gratuitamente ThinkDesign 2015! Scrivi a noi per sapere di piú.</value>
+    <value>Prova gratuitamente ThinkDesign 2015! Scrivici per saperne di più.</value>
   </data>
   <data name="View_Home_THelp" xml:space="preserve">
-    <value>Help ThinkDesign</value>
+    <value>ThinkDesign Help</value>
   </data>
   <data name="View_Home_THelp_Text" xml:space="preserve">
-    <value>Note di rilascio &amp; manuale 2016 - lavoro in corso.</value>
+    <value>Note di rilascio e Manuale Utente TD2016 - work in progress.</value>
   </data>
   <data name="View_Home_UserGuidebook" xml:space="preserve">
-    <value>Guida User</value>
+    <value>User Guidebook</value>
   </data>
   <data name="View_Home_UserGuidebook_Text" xml:space="preserve">
-    <value>Qui puoi accedere alla guida User.</value>
+    <value>Qui puoi accedere alla User Guidebook.</value>
   </data>
   <data name="View_Home_VarGuidebook" xml:space="preserve">
-    <value>Guida VAR</value>
+    <value>VAR Guidebook</value>
   </data>
   <data name="View_Home_VarGuidebook_Text" xml:space="preserve">
-    <value>Qui puoi accedere alla guida VAR.</value>
+    <value>Qui puoi accedere alla VAR Guidebook.</value>
   </data>
   <data name="View_Menu_Activities" xml:space="preserve">
-    <value>Attivitá</value>
+    <value>Attività</value>
   </data>
   <data name="View_Menu_AllCompanies" xml:space="preserve">
     <value>Aziende</value>
@@ -217,7 +220,7 @@
     <value>Contatti</value>
   </data>
   <data name="View_Menu_Download" xml:space="preserve">
-    <value>Scarica</value>
+    <value>Download</value>
   </data>
   <data name="View_Menu_Home" xml:space="preserve">
     <value>Home</value>
