--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ConfirmNewPassword" xml:space="preserve">
-    <value>Confirm new password</value>
+    <value>パスワードの確認</value>
   </data>
   <data name="ConfirmPassword" xml:space="preserve">
     <value>The new password and confirmation password do not match.</value>
@@ -133,7 +133,7 @@
     <value>Manage Account</value>
   </data>
   <data name="NewPassword" xml:space="preserve">
-    <value>New Password</value>
+    <value>新しいパスワード</value>
   </data>
   <data name="OldPassword" xml:space="preserve">
     <value>Old Password</value>
@@ -142,88 +142,91 @@
     <value>Please Enter Password</value>
   </data>
   <data name="View_HomeIndex_ChangePassword" xml:space="preserve">
-    <value>Change password</value>
+    <value>パスワード変更</value>
   </data>
   <data name="View_HomeIndex_Hello" xml:space="preserve">
-    <value>Hello</value>
+    <value>こんにちは、</value>
   </data>
   <data name="View_HomeIndex_Logoff" xml:space="preserve">
-    <value>Log off</value>
+    <value>ログオフ</value>
+  </data>
+  <data name="View_HomeIndex_of" xml:space="preserve">
+    <value>of</value>
   </data>
   <data name="View_HomeIndex_Title" xml:space="preserve">
-    <value>Customer Care</value>
+    <value>カスタマーケア</value>
   </data>
   <data name="View_Home_BreakingNews" xml:space="preserve">
-    <value>Breaking News</value>
+    <value>ニュース</value>
   </data>
   <data name="View_Home_CaseManagement" xml:space="preserve">
-    <value>Case Management</value>
+    <value>お問い合わせ</value>
   </data>
   <data name="View_Home_CaseManagement_Text1" xml:space="preserve">
-    <value>Contact our Customer Care and open a New Case.</value>
+    <value>カスタマーケアチームにお問い合わせいただけます。</value>
   </data>
   <data name="View_Home_CaseManagement_Text2" xml:space="preserve">
-    <value>Use your old credentials to access this section.</value>
+    <value>旧サイトへログインします。</value>
   </data>
   <data name="View_Home_ELearning" xml:space="preserve">
     <value>e-Learning</value>
   </data>
   <data name="View_Home_ELearning_Text" xml:space="preserve">
-    <value>Software training material, like video and step-by-step tutorials, supplied via the web.</value>
+    <value>各種自習教材を Web サイトからダウンロードしてご利用いただけます。</value>
   </data>
   <data name="View_Home_NewLicensing" xml:space="preserve">
-    <value>New Licensing</value>
+    <value>インストールガイド</value>
   </data>
   <data name="View_Home_NewLicensing_Text" xml:space="preserve">
-    <value>All you need to know about C2V, V2C and Floating Licensing.</value>
+    <value>ライセンス操作、C2V、V2C ファイル、フローティングライセンスのインストール等のドキュメントです。</value>
   </data>
   <data name="View_Home_Subtitle" xml:space="preserve">
-    <value>This is the new site to manage your licenses.</value>
+    <value>Welcome to the new Customer Care portal!</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
-    <value>ThinkDesign 2016 beta is now available! Have a look at the Download section.</value>
+    <value>ThinkDesign 2016 beta がダウンロードエリアからご利用いただけます！</value>
   </data>
   <data name="View_Home_Text2" xml:space="preserve">
-    <value>Try for free ThinkDesign 2015! Write to us to know more.</value>
+    <value>ThinkDesign 2015 のフリートライアルが可能です。ご興味ある場合はお知らせください。</value>
   </data>
   <data name="View_Home_THelp" xml:space="preserve">
-    <value>ThinkDesign Help</value>
+    <value>ThinkDesign ヘルプ（英語）</value>
   </data>
   <data name="View_Home_THelp_Text" xml:space="preserve">
-    <value>Release Notes &amp; Help manual 2016 - Work in Progress.</value>
+    <value>バージョン 2016 用リリースノートとヘルプ（作業中）</value>
   </data>
   <data name="View_Home_UserGuidebook" xml:space="preserve">
-    <value>User Guidebook</value>
+    <value>ユーザーガイドブック（英語）</value>
   </data>
   <data name="View_Home_UserGuidebook_Text" xml:space="preserve">
-    <value>Here you can access the User Guidebook.</value>
+    <value>ユーザーガイドブックを開きます。</value>
   </data>
   <data name="View_Home_VarGuidebook" xml:space="preserve">
-    <value>VAR Guidebook</value>
+    <value>VAR ガイドブック</value>
   </data>
   <data name="View_Home_VarGuidebook_Text" xml:space="preserve">
-    <value>Here you can access the VAR Guidebook.</value>
+    <value>VAR ガイドブックを開きます。</value>
   </data>
   <data name="View_Menu_Activities" xml:space="preserve">
     <value>Activities</value>
   </data>
   <data name="View_Menu_AllCompanies" xml:space="preserve">
-    <value>All Companies</value>
+    <value>全会社</value>
   </data>
   <data name="View_Menu_AllLicenses" xml:space="preserve">
-    <value>All Licenses</value>
+    <value>全ライセンス</value>
   </data>
   <data name="View_Menu_AllPeoples" xml:space="preserve">
-    <value>All Peoples</value>
+    <value>All People</value>
   </data>
   <data name="View_Menu_Download" xml:space="preserve">
-    <value>Download</value>
+    <value>ダウンロード</value>
   </data>
   <data name="View_Menu_Home" xml:space="preserve">
-    <value>Home</value>
+    <value>ホーム</value>
   </data>
   <data name="View_Menu_Licenses" xml:space="preserve">
-    <value>Licenses</value>
+    <value>ライセンス</value>
   </data>
   <data name="View_Menu_Orders" xml:space="preserve">
     <value>Orders</value>
