updated the download page localization stucture

--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -123,6 +123,189 @@
   <data name="ConfirmPassword" xml:space="preserve">
     <value>Le due Password non coincidono.</value>
   </data>
+  <data name="Description" xml:space="preserve">
+    <value>Descrizione</value>
+  </data>
+  <data name="Description2011TDViewerLight" xml:space="preserve">
+    <value>Questo file installa applicazione ThinkDesign Viewer 2011.</value>
+  </data>
+  <data name="Description2011ThinkDesign32bit" xml:space="preserve">
+    <value>Questo file installa il ThinkDesign Suite 2011 32bit ufficiale.</value>
+  </data>
+  <data name="Description2011thinkPLM" xml:space="preserve">
+    <value>Questa sezione include versione ufficiale del thinkPLM  2011.</value>
+  </data>
+  <data name="Description2011Utilitytools" xml:space="preserve">
+    <value>Utilities e plug-ins per la versione 2011.</value>
+  </data>
+  <data name="Description2012TDViewerLight" xml:space="preserve">
+    <value>Questo file installerà applicazione ThinkDesign Viewer 2012.</value>
+  </data>
+  <data name="Description2012ThinkDesign32bit" xml:space="preserve">
+    <value>Questo file installa il ThinkDesign Suite 2012 a 32 bit.</value>
+  </data>
+  <data name="Description2012ThinkDesign64bit" xml:space="preserve">
+    <value>Questo file installa la suite ufficiale ThinkDesign 2012 a 64 bit.</value>
+  </data>
+  <data name="Description2012thinkPLM" xml:space="preserve">
+    <value>Questa sezione include versione ufficiale del thinkPLM 2012.</value>
+  </data>
+  <data name="Description2012Utilitytools" xml:space="preserve">
+    <value>Utilities e plug-ins per la versione 2012.</value>
+  </data>
+  <data name="Description2013TDViewerLight" xml:space="preserve">
+    <value>Questo file installerà applicazione ThinkDesign Viewer 2013.</value>
+  </data>
+  <data name="Description2013ThinkDesign32bit" xml:space="preserve">
+    <value>Questo file installa il ThinkDesign Suite 2013 a 32 bit.</value>
+  </data>
+  <data name="Description2013ThinkDesign64bit" xml:space="preserve">
+    <value>Questo file installa la suite ufficiale ThinkDesign 2013 a 64 bit.</value>
+  </data>
+  <data name="Description2013thinkPLM" xml:space="preserve">
+    <value>Questa sezione include versione ufficiale del thinkPLM 2013.</value>
+  </data>
+  <data name="Description2013Utilitytools" xml:space="preserve">
+    <value>Utilities e plug-ins per la versione 2013.</value>
+  </data>
+  <data name="Description2014TDViewerLight" xml:space="preserve">
+    <value>Questo file installerà applicazione ThinkDesign Viewer 2014.</value>
+  </data>
+  <data name="Description2014ThinkDesign32bit" xml:space="preserve">
+    <value>Questo file installa il ThinkDesign Suite 2014 a 32 bit.</value>
+  </data>
+  <data name="Description2014ThinkDesign64bit" xml:space="preserve">
+    <value>Questo file installa la suite ufficiale ThinkDesign 2014 a 64 bit.</value>
+  </data>
+  <data name="Description2014thinkPLM" xml:space="preserve">
+    <value>Questa sezione include versione ufficiale del thinkPLM 2014.</value>
+  </data>
+  <data name="Description2014Utilitytools" xml:space="preserve">
+    <value>Utilities e plug-ins per la versione 2014.</value>
+  </data>
+  <data name="Description2015TDViewerLightSP3" xml:space="preserve">
+    <value>Questo file installa l'applicazione SP3 ThinkDesign Viewer 2015.</value>
+  </data>
+  <data name="Description2015ThinkDesign32bitSP2" xml:space="preserve">
+    <value>SP2 Legacy versione per i vecchi sistemi.</value>
+  </data>
+  <data name="Description2015ThinkDesign32bitSP3" xml:space="preserve">
+    <value>SP3 Legacy versione per i vecchi sistemi.</value>
+  </data>
+  <data name="Description2015ThinkDesign64bitSP2" xml:space="preserve">
+    <value>Questo file installa il ThinkDesign Suite 2015 a 64 bit SP2.</value>
+  </data>
+  <data name="Description2015ThinkDesign64bitSP3" xml:space="preserve">
+    <value>Versione raccomandata.</value>
+  </data>
+  <data name="Description2015thinkPLMSP2" xml:space="preserve">
+    <value>Questa sezione include thinkPLM 2015 SP2.</value>
+  </data>
+  <data name="Description2015thinkPLMSP3" xml:space="preserve">
+    <value>Questa sezione include thinkPLM SP3 versione ufficiale del 2015.</value>
+  </data>
+  <data name="Description2015Utilitytools" xml:space="preserve">
+    <value>Floating Licensing Installer, utilities e plug-ins per la versione 2015.</value>
+  </data>
+  <data name="Description2016ThinkDesign32bitbeta" xml:space="preserve">
+    <value>Versione beta Legacy per i vecchi sistemi.</value>
+  </data>
+  <data name="Description2016ThinkDesign64bitbeta" xml:space="preserve">
+    <value>Versione Beta di ThinkDesign 2016.</value>
+  </data>
+  <data name="Description2016thinkPLMbeta" xml:space="preserve">
+    <value>Questa sezione include thinkPLM 2016 versione beta.</value>
+  </data>
+  <data name="Download2011TDViewerLight" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2011.zip</value>
+  </data>
+  <data name="Download2011ThinkDesign32bit" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2011.1build410/Selfdvd_td_2011T1_b410.exe</value>
+  </data>
+  <data name="Download2011thinkPLM" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2011.1build410/Selfdvd_thinkplm_2011T1_b410.exe</value>
+  </data>
+  <data name="Download2011Utilitytools" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2011.zip</value>
+  </data>
+  <data name="Download2012TDViewerLight" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2012.1build20312/SelfCD_tdviewer_2012T1_b20312.exe</value>
+  </data>
+  <data name="Download2012ThinkDesign32bit" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2012.1build20312/Selfdvd_td_2012T1_b20312.exe</value>
+  </data>
+  <data name="Download2012ThinkDesign64bit" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2012.1build20312/Selfdvd_td_64bit_2012T1_b20312.exe</value>
+  </data>
+  <data name="Download2012thinkPLM" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2012.1build20312/Selfdvd_thinkplm_2012T1_b20312.exe</value>
+  </data>
+  <data name="Download2012Utilitytools" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2012.zip</value>
+  </data>
+  <data name="Download2013TDViewerLight" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2013.1build21029/SelfCD_tdviewer_2013T1_b21029.exe</value>
+  </data>
+  <data name="Download2013ThinkDesign32bit" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2013.1build21029/Selfdvd_td_2013T1_b21029.exe</value>
+  </data>
+  <data name="Download2013ThinkDesign64bit" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2013.1build21029/Selfdvd_td_64bit_2013T1_b21029.exe</value>
+  </data>
+  <data name="Download2013thinkPLM" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2013.1build21029/Selfdvd_thinkplm_2013T1_b21029.exe</value>
+  </data>
+  <data name="Download2013Utilitytools" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2013.zip</value>
+  </data>
+  <data name="Download2014TDViewerLight" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2014.1build20506/SelfCD_tdviewer_2014T1_b20506.exe</value>
+  </data>
+  <data name="Download2014ThinkDesign32bit" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2014.1build20506/Selfdvd_td_2014T1_b20506.exe</value>
+  </data>
+  <data name="Download2014ThinkDesign64bit" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2014.1build20506/Selfdvd_td_64bit_2014T1_b20506.exe</value>
+  </data>
+  <data name="Download2014thinkPLM" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2014.1build20506/Selfdvd_thinkplm_2014T1_b20506.exe</value>
+  </data>
+  <data name="Download2014Utilitytools" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2014.zip</value>
+  </data>
+  <data name="Download2015TDViewerLightSP3" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2015.2build30502/SelfCD_tdviewer_2015T2_b30502_64bit.exe</value>
+  </data>
+  <data name="Download2015ThinkDesign32bitSP2" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2015.2build30125/Selfdvd_td_2015T2_b30125.exe</value>
+  </data>
+  <data name="Download2015ThinkDesign32bitSP3" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2015.2build30502/Selfdvd_td_2015T2_b30502.exe</value>
+  </data>
+  <data name="Download2015ThinkDesign64bitSP2" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2015.2build30125/Selfdvd_td_64bit_2015T2_b30125.exe</value>
+  </data>
+  <data name="Download2015ThinkDesign64bitSP3" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2015.2build30502/Selfdvd_td_64bit_2015T2_b30502.exe</value>
+  </data>
+  <data name="Download2015thinkPLMSP2" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2015.2build30125/Selfdvd_thinkplm_2015T2_b30125.exe</value>
+  </data>
+  <data name="Download2015thinkPLMSP3" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2015.2build30502/Selfdvd_thinkplm_2015T2_b30502.exe</value>
+  </data>
+  <data name="Download2015Utilitytools" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3tools/Tools2015.zip</value>
+  </data>
+  <data name="Download2016ThinkDesign32bitbeta" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20617/dvd_td_2016T1_b20617.iso</value>
+  </data>
+  <data name="Download2016ThinkDesign64bitbeta" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20617/dvd_td_64bit_2016T1_b20617.iso</value>
+  </data>
+  <data name="Download2016thinkPLMbeta" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20617/dvd_thinkplm_2016T1_b20617.iso</value>
+  </data>
   <data name="LengthPassword" xml:space="preserve">
     <value>La {0} deve essere lunga almeno {2} caratteri.</value>
   </data>
@@ -137,6 +320,99 @@
   </data>
   <data name="OldPassword" xml:space="preserve">
     <value>Password attuale</value>
+  </data>
+  <data name="Product" xml:space="preserve">
+    <value>Prodotto</value>
+  </data>
+  <data name="Product2011TDViewerLight" xml:space="preserve">
+    <value>TDViewerLight 2011</value>
+  </data>
+  <data name="Product2011ThinkDesign32bit" xml:space="preserve">
+    <value>ThinkDesign 2011 32bit</value>
+  </data>
+  <data name="Product2011thinkPLM" xml:space="preserve">
+    <value>thinkPLM 2011</value>
+  </data>
+  <data name="Product2011Utilitytools" xml:space="preserve">
+    <value>Utility tools</value>
+  </data>
+  <data name="Product2012TDViewerLight" xml:space="preserve">
+    <value>TDViewerLight 2012</value>
+  </data>
+  <data name="Product2012ThinkDesign32bit" xml:space="preserve">
+    <value>ThinkDesign 2012 32bit</value>
+  </data>
+  <data name="Product2012ThinkDesign64bit" xml:space="preserve">
+    <value>ThinkDesign 2012 64bit</value>
+  </data>
+  <data name="Product2012thinkPLM" xml:space="preserve">
+    <value>thinkPLM 2012</value>
+  </data>
+  <data name="Product2012Utilitytools" xml:space="preserve">
+    <value>Utility tools</value>
+  </data>
+  <data name="Product2013TDViewerLight" xml:space="preserve">
+    <value>TDViewerLight 2013</value>
+  </data>
+  <data name="Product2013ThinkDesign32bit" xml:space="preserve">
+    <value>ThinkDesign 2013 32bit</value>
+  </data>
+  <data name="Product2013ThinkDesign64bit" xml:space="preserve">
+    <value>ThinkDesign 2013 64bit</value>
+  </data>
+  <data name="Product2013thinkPLM" xml:space="preserve">
+    <value>thinkPLM 2013</value>
+  </data>
+  <data name="Product2013Utilitytools" xml:space="preserve">
+    <value>Utility tools</value>
+  </data>
+  <data name="Product2014TDViewerLight" xml:space="preserve">
+    <value>TDViewerLight 2014</value>
+  </data>
+  <data name="Product2014ThinkDesign32bit" xml:space="preserve">
+    <value>ThinkDesign 2014 32bit</value>
+  </data>
+  <data name="Product2014ThinkDesign64bit" xml:space="preserve">
+    <value>ThinkDesign 2014 64bit</value>
+  </data>
+  <data name="Product2014thinkPLM" xml:space="preserve">
+    <value>thinkPLM 2014</value>
+  </data>
+  <data name="Product2014Utilitytools" xml:space="preserve">
+    <value>Utility tools</value>
+  </data>
+  <data name="Product2015TDViewerLightSP3" xml:space="preserve">
+    <value>TDViewerLight 2015 SP3</value>
+  </data>
+  <data name="Product2015ThinkDesign32bitSP2" xml:space="preserve">
+    <value>ThinkDesign 2015 32bit SP2</value>
+  </data>
+  <data name="Product2015ThinkDesign32bitSP3" xml:space="preserve">
+    <value>ThinkDesign 2015 32bit SP3</value>
+  </data>
+  <data name="Product2015ThinkDesign64bitSP2" xml:space="preserve">
+    <value>ThinkDesign 2015 64bit SP2</value>
+  </data>
+  <data name="Product2015ThinkDesign64bitSP3" xml:space="preserve">
+    <value>ThinkDesign 2015 64bit SP3</value>
+  </data>
+  <data name="Product2015thinkPLMSP2" xml:space="preserve">
+    <value>thinkPLM 2015 SP2</value>
+  </data>
+  <data name="Product2015thinkPLMSP3" xml:space="preserve">
+    <value>thinkPLM 2015 SP3</value>
+  </data>
+  <data name="Product2015Utilitytools" xml:space="preserve">
+    <value>Utility tools &amp; Floating Licensing Installer</value>
+  </data>
+  <data name="Product2016ThinkDesign32bitbeta" xml:space="preserve">
+    <value>ThinkDesign 2016 32bit beta</value>
+  </data>
+  <data name="Product2016ThinkDesign64bitbeta" xml:space="preserve">
+    <value>ThinkDesign 2016 64bit beta</value>
+  </data>
+  <data name="Product2016thinkPLMbeta" xml:space="preserve">
+    <value>thinkPLM 2016 beta</value>
   </data>
   <data name="RequiredFieldPassword" xml:space="preserve">
     <value>Inserire Password</value>
@@ -176,6 +452,9 @@
   </data>
   <data name="View_Home_NewLicensing" xml:space="preserve">
     <value>Nuovo Licensing</value>
+  </data>
+  <data name="View_Home_NewLicensingLink" xml:space="preserve">
+    <value>http://www.think3.eu/images/pdf/Licenses_it.pdf</value>
   </data>
   <data name="View_Home_NewLicensing_Text" xml:space="preserve">
     <value>Tutto quello che devi sapere su C2V, V2C e licenze floating.</value>
