--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -121,25 +121,301 @@
     <value>パスワードの確認</value>
   </data>
   <data name="ConfirmPassword" xml:space="preserve">
-    <value>The new password and confirmation password do not match.</value>
+    <value>新しいパスワードと確認用パスワードが一致しません。</value>
+  </data>
+  <data name="Description" xml:space="preserve">
+    <value>説明</value>
+  </data>
+  <data name="Description2011TDViewerLight" xml:space="preserve">
+    <value>この自己解凍ファイルは ThinkDesign Viewer 2011 をインストールします。</value>
+  </data>
+  <data name="Description2011ThinkDesign32bit" xml:space="preserve">
+    <value>この自己解凍ファイルは ThinkDesign suite 2011 32bit 公式版をインストールします。</value>
+  </data>
+  <data name="Description2011thinkPLM" xml:space="preserve">
+    <value>thinkPLM 2011 公式版。</value>
+  </data>
+  <data name="Description2011Utilitytools" xml:space="preserve">
+    <value>バージョン 2011 用ユーティリティツール。</value>
+  </data>
+  <data name="Description2012TDViewerLight" xml:space="preserve">
+    <value>この自己解凍ファイルは ThinkDesign Viewer 2012 をインストールします。</value>
+  </data>
+  <data name="Description2012ThinkDesign32bit" xml:space="preserve">
+    <value>この自己解凍ファイルは ThinkDesign suite 2012 32bit 公式版をインストールします。</value>
+  </data>
+  <data name="Description2012ThinkDesign64bit" xml:space="preserve">
+    <value>この自己解凍ファイルは ThinkDesign suite 2012 64bit 公式版をインストールします。</value>
+  </data>
+  <data name="Description2012thinkPLM" xml:space="preserve">
+    <value>thinkPLM 2012 公式版。</value>
+  </data>
+  <data name="Description2012Utilitytools" xml:space="preserve">
+    <value>バージョン 2012 用ユーティリティツール。</value>
+  </data>
+  <data name="Description2013TDViewerLight" xml:space="preserve">
+    <value>この自己解凍ファイルは ThinkDesign Viewer 2013 をインストールします。</value>
+  </data>
+  <data name="Description2013ThinkDesign32bit" xml:space="preserve">
+    <value>この自己解凍ファイルは ThinkDesign suite 2013 32bit 公式版をインストールします。</value>
+  </data>
+  <data name="Description2013ThinkDesign64bit" xml:space="preserve">
+    <value>この自己解凍ファイルは ThinkDesign suite 2013 64bit 公式版をインストールします。</value>
+  </data>
+  <data name="Description2013thinkPLM" xml:space="preserve">
+    <value>thinkPLM 2013 公式版。</value>
+  </data>
+  <data name="Description2013Utilitytools" xml:space="preserve">
+    <value>バージョン 2013 用ユーティリティツール。</value>
+  </data>
+  <data name="Description2014TDViewerLight" xml:space="preserve">
+    <value>この自己解凍ファイルは ThinkDesign Viewer 2014 をインストールします。</value>
+  </data>
+  <data name="Description2014ThinkDesign32bit" xml:space="preserve">
+    <value>この自己解凍ファイルは ThinkDesign suite 2014 32bit 公式版をインストールします。</value>
+  </data>
+  <data name="Description2014ThinkDesign64bit" xml:space="preserve">
+    <value>この自己解凍ファイルは ThinkDesign suite 2014 64bit 公式版をインストールします。</value>
+  </data>
+  <data name="Description2014thinkPLM" xml:space="preserve">
+    <value>thinkPLM 2014 公式版。</value>
+  </data>
+  <data name="Description2014Utilitytools" xml:space="preserve">
+    <value>バージョン 2014 用ユーティリティツール。</value>
+  </data>
+  <data name="Description2015TDViewerLightSP3" xml:space="preserve">
+    <value>この自己解凍ファイルは ThinkDesign Viewer 2015 SP3 をインストールします。</value>
+  </data>
+  <data name="Description2015ThinkDesign32bitSP2" xml:space="preserve">
+    <value>SP2 Legacy version for old systems.</value>
+  </data>
+  <data name="Description2015ThinkDesign32bitSP3" xml:space="preserve">
+    <value>SP3 Legacy version for old systems.</value>
+  </data>
+  <data name="Description2015ThinkDesign64bitSP2" xml:space="preserve">
+    <value>この自己解凍ファイルは ThinkDesign suite 2015 64bit SP2 公式版をインストールします。</value>
+  </data>
+  <data name="Description2015ThinkDesign64bitSP3" xml:space="preserve">
+    <value>公式版。</value>
+  </data>
+  <data name="Description2015thinkPLMSP2" xml:space="preserve">
+    <value>thinkPLM 2015 SP2。</value>
+  </data>
+  <data name="Description2015thinkPLMSP3" xml:space="preserve">
+    <value>thinkPLM 2015 SP3 公式版。</value>
+  </data>
+  <data name="Description2015Utilitytools" xml:space="preserve">
+    <value>フローティングライセンスサーバーのインストーラーとバージョン 2015 用ユーティリティツール。</value>
+  </data>
+  <data name="Description2016ThinkDesign32bitbeta" xml:space="preserve">
+    <value>Legacy beta version for old systems.</value>
+  </data>
+  <data name="Description2016ThinkDesign64bitbeta" xml:space="preserve">
+    <value>ThinkDesign 2016 のベータ版です。</value>
+  </data>
+  <data name="Description2016thinkPLMbeta" xml:space="preserve">
+    <value>thinkPLM 2016 ベータ版。</value>
+  </data>
+  <data name="Download2011TDViewerLight" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2011.1build410/SelfCD_tdviewer_2011T1_b410.exe</value>
+  </data>
+  <data name="Download2011ThinkDesign32bit" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2011.1build410/Selfdvd_td_2011T1_b410.exe</value>
+  </data>
+  <data name="Download2011thinkPLM" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2011.1build410/Selfdvd_thinkplm_2011T1_b410.exe</value>
+  </data>
+  <data name="Download2011Utilitytools" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/Tools/2011.1/Tools2011.zip</value>
+  </data>
+  <data name="Download2012TDViewerLight" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2012.1build20312/SelfCD_tdviewer_2012T1_b20312.exe</value>
+  </data>
+  <data name="Download2012ThinkDesign32bit" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2012.1build20312/Selfdvd_td_2012T1_b20312.exe</value>
+  </data>
+  <data name="Download2012ThinkDesign64bit" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2012.1build20312/Selfdvd_td_64bit_2012T1_b20312.exe</value>
+  </data>
+  <data name="Download2012thinkPLM" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2012.1build20312/Selfdvd_thinkplm_2012T1_b20312.exe</value>
+  </data>
+  <data name="Download2012Utilitytools" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/Tools/2012.1/Tools2012.zip</value>
+  </data>
+  <data name="Download2013TDViewerLight" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2013.1build21029/SelfCD_tdviewer_2013T1_b21029.exe</value>
+  </data>
+  <data name="Download2013ThinkDesign32bit" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2013.1build21029/Selfdvd_td_2013T1_b21029.exe</value>
+  </data>
+  <data name="Download2013ThinkDesign64bit" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2013.1build21029/Selfdvd_td_64bit_2013T1_b21029.exe</value>
+  </data>
+  <data name="Download2013thinkPLM" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2013.1build21029/Selfdvd_thinkplm_2013T1_b21029.exe</value>
+  </data>
+  <data name="Download2013Utilitytools" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/Tools/2013.1/Tools2013.zip</value>
+  </data>
+  <data name="Download2014TDViewerLight" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2014.1build20506/SelfCD_tdviewer_2014T1_b20506.exe</value>
+  </data>
+  <data name="Download2014ThinkDesign32bit" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2014.1build20506/Selfdvd_td_2014T1_b20506.exe</value>
+  </data>
+  <data name="Download2014ThinkDesign64bit" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2014.1build20506/Selfdvd_td_64bit_2014T1_b20506.exe</value>
+  </data>
+  <data name="Download2014thinkPLM" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2014.1build20506/Selfdvd_thinkplm_2014T1_b20506.exe</value>
+  </data>
+  <data name="Download2014Utilitytools" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/Tools/2014.1/Tools2014.zip</value>
+  </data>
+  <data name="Download2015TDViewerLightSP3" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2015.2build30502/SelfCD_tdviewer_2015T2_b30502_64bit.exe</value>
+  </data>
+  <data name="Download2015ThinkDesign32bitSP2" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2015.2build30125/Selfdvd_td_2015T2_b30125.exe</value>
+  </data>
+  <data name="Download2015ThinkDesign32bitSP3" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2015.2build30502/Selfdvd_td_2015T2_b30502.exe</value>
+  </data>
+  <data name="Download2015ThinkDesign64bitSP2" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2015.2build30105/Selfdvd_td_64bit_2015T2_b30105.exe</value>
+  </data>
+  <data name="Download2015ThinkDesign64bitSP3" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2015.2build30502/Selfdvd_td_64bit_2015T2_b30502.exe</value>
+  </data>
+  <data name="Download2015thinkPLMSP2" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2015.2build30105/Selfdvd_thinkplm_2015T2_b30105.exe</value>
+  </data>
+  <data name="Download2015thinkPLMSP3" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2015.2build30502/Selfdvd_thinkplm_2015T2_b30502.exe</value>
+  </data>
+  <data name="Download2015Utilitytools" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/Tools/2015.2/Tools2015.zip</value>
+  </data>
+  <data name="Download2016ThinkDesign32bitbeta" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.eu/t3software/2016_build20617/dvd_td_2016T1_b20617.iso</value>
+  </data>
+  <data name="Download2016ThinkDesign64bitbeta" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2016.1build20614/dvd_td_64bit_2016T1_b20614.iso</value>
+  </data>
+  <data name="Download2016thinkPLMbeta" xml:space="preserve">
+    <value>ftp://t3user:t3user2012@ftp.think3.jp/t3software/2016.1build20614/dvd_thinkplm_2016T1_b20614.iso</value>
   </data>
   <data name="LengthPassword" xml:space="preserve">
-    <value>The {0} must be at least {2} characters long.</value>
+    <value>{0} は少なくとも {2} 文字以上である必要があります。</value>
   </data>
   <data name="LoggedIn" xml:space="preserve">
-    <value>You're logged in as</value>
+    <value>現在のログイン：</value>
   </data>
   <data name="ManageAccount" xml:space="preserve">
-    <value>Manage Account</value>
+    <value>アカウントの管理</value>
   </data>
   <data name="NewPassword" xml:space="preserve">
     <value>新しいパスワード</value>
   </data>
   <data name="OldPassword" xml:space="preserve">
-    <value>Old Password</value>
+    <value>古いパスワード</value>
+  </data>
+  <data name="Product" xml:space="preserve">
+    <value>製品</value>
+  </data>
+  <data name="Product2011TDViewerLight" xml:space="preserve">
+    <value>TDViewerLight 2011</value>
+  </data>
+  <data name="Product2011ThinkDesign32bit" xml:space="preserve">
+    <value>ThinkDesign 2011 32bit</value>
+  </data>
+  <data name="Product2011thinkPLM" xml:space="preserve">
+    <value>thinkPLM 2011</value>
+  </data>
+  <data name="Product2011Utilitytools" xml:space="preserve">
+    <value>ユーティリティツール</value>
+  </data>
+  <data name="Product2012TDViewerLight" xml:space="preserve">
+    <value>TDViewerLight 2012</value>
+  </data>
+  <data name="Product2012ThinkDesign32bit" xml:space="preserve">
+    <value>ThinkDesign 2012 32bit</value>
+  </data>
+  <data name="Product2012ThinkDesign64bit" xml:space="preserve">
+    <value>ThinkDesign 2012 64bit</value>
+  </data>
+  <data name="Product2012thinkPLM" xml:space="preserve">
+    <value>thinkPLM 2012</value>
+  </data>
+  <data name="Product2012Utilitytools" xml:space="preserve">
+    <value>ユーティリティツール</value>
+  </data>
+  <data name="Product2013TDViewerLight" xml:space="preserve">
+    <value>TDViewerLight 2013</value>
+  </data>
+  <data name="Product2013ThinkDesign32bit" xml:space="preserve">
+    <value>ThinkDesign 2013 32bit</value>
+  </data>
+  <data name="Product2013ThinkDesign64bit" xml:space="preserve">
+    <value>ThinkDesign 2013 64bit</value>
+  </data>
+  <data name="Product2013thinkPLM" xml:space="preserve">
+    <value>thinkPLM 2013</value>
+  </data>
+  <data name="Product2013Utilitytools" xml:space="preserve">
+    <value>ユーティリティツール</value>
+  </data>
+  <data name="Product2014TDViewerLight" xml:space="preserve">
+    <value>TDViewerLight 2014</value>
+  </data>
+  <data name="Product2014ThinkDesign32bit" xml:space="preserve">
+    <value>ThinkDesign 2014 32bit</value>
+  </data>
+  <data name="Product2014ThinkDesign64bit" xml:space="preserve">
+    <value>ThinkDesign 2014 64bit</value>
+  </data>
+  <data name="Product2014thinkPLM" xml:space="preserve">
+    <value>thinkPLM 2014</value>
+  </data>
+  <data name="Product2014Utilitytools" xml:space="preserve">
+    <value>ユーティリティツール</value>
+  </data>
+  <data name="Product2015TDViewerLightSP3" xml:space="preserve">
+    <value>TDViewerLight 2015 SP3</value>
+  </data>
+  <data name="Product2015ThinkDesign32bitSP2" xml:space="preserve">
+    <value>ThinkDesign 2015 32bit SP2</value>
+  </data>
+  <data name="Product2015ThinkDesign32bitSP3" xml:space="preserve">
+    <value>ThinkDesign 2015 32bit SP3</value>
+  </data>
+  <data name="Product2015ThinkDesign64bitSP2" xml:space="preserve">
+    <value>ThinkDesign 2015 64bit SP2</value>
+  </data>
+  <data name="Product2015ThinkDesign64bitSP3" xml:space="preserve">
+    <value>ThinkDesign 2015 64bit SP3</value>
+  </data>
+  <data name="Product2015thinkPLMSP2" xml:space="preserve">
+    <value>thinkPLM 2015 SP2</value>
+  </data>
+  <data name="Product2015thinkPLMSP3" xml:space="preserve">
+    <value>thinkPLM 2015 SP3</value>
+  </data>
+  <data name="Product2015Utilitytools" xml:space="preserve">
+    <value>ユーティリティツールとフローティングライセンスサーバー</value>
+  </data>
+  <data name="Product2016ThinkDesign32bitbeta" xml:space="preserve">
+    <value>ThinkDesign 2016 32bit beta</value>
+  </data>
+  <data name="Product2016ThinkDesign64bitbeta" xml:space="preserve">
+    <value>ThinkDesign 2016 64bit ベータ版</value>
+  </data>
+  <data name="Product2016thinkPLMbeta" xml:space="preserve">
+    <value>thinkPLM 2016 ベータ版</value>
   </data>
   <data name="RequiredFieldPassword" xml:space="preserve">
-    <value>Please Enter Password</value>
+    <value>パスワードを入力してください。</value>
   </data>
   <data name="View_HomeIndex_ChangePassword" xml:space="preserve">
     <value>パスワード変更</value>
@@ -151,7 +427,7 @@
     <value>ログオフ</value>
   </data>
   <data name="View_HomeIndex_of" xml:space="preserve">
-    <value>of</value>
+    <value>会社名：</value>
   </data>
   <data name="View_HomeIndex_Title" xml:space="preserve">
     <value>カスタマーケア</value>
@@ -177,11 +453,14 @@
   <data name="View_Home_NewLicensing" xml:space="preserve">
     <value>インストールガイド</value>
   </data>
+  <data name="View_Home_NewLicensingLink" xml:space="preserve">
+    <value>ftp://ftp.think3.jp/tdExtra/InstallGuide/InstallGuide.pdf</value>
+  </data>
   <data name="View_Home_NewLicensing_Text" xml:space="preserve">
     <value>ライセンス操作、C2V、V2C ファイル、フローティングライセンスのインストール等のドキュメントです。</value>
   </data>
   <data name="View_Home_Subtitle" xml:space="preserve">
-    <value>Welcome to the new Customer Care portal!</value>
+    <value>新しいカスタマーケアポータルへようこそ！</value>
   </data>
   <data name="View_Home_Text1" xml:space="preserve">
     <value>ThinkDesign 2016 beta がダウンロードエリアからご利用いただけます！</value>
@@ -217,7 +496,7 @@
     <value>全ライセンス</value>
   </data>
   <data name="View_Menu_AllPeoples" xml:space="preserve">
-    <value>All People</value>
+    <value>全ての人</value>
   </data>
   <data name="View_Menu_Download" xml:space="preserve">
     <value>ダウンロード</value>
@@ -229,6 +508,6 @@
     <value>ライセンス</value>
   </data>
   <data name="View_Menu_Orders" xml:space="preserve">
-    <value>Orders</value>
+    <value>その他</value>
   </data>
 </root>
