localized also the license pages

--- a/DPTnew/DPTnew/Localization/Resource.it-IT.resx
+++ b/DPTnew/DPTnew/Localization/Resource.it-IT.resx
@@ -510,4 +510,76 @@
   <data name="View_Menu_Orders" xml:space="preserve">
     <value>Ordini</value>
   </data>
+  <data name="AccountName" xml:space="preserve">
+    <value>Nome Account</value>
+  </data>
+  <data name="AccountNumber" xml:space="preserve">
+    <value>N° Account</value>
+  </data>
+  <data name="ButtonExport" xml:space="preserve">
+    <value>Esporta</value>
+  </data>
+  <data name="ButtonInstall2015" xml:space="preserve">
+    <value>Installa 2015</value>
+  </data>
+  <data name="ButtonInstallMin2015" xml:space="preserve">
+    <value>Installa &lt; 2015</value>
+  </data>
+  <data name="ButtonPasswordMin2015" xml:space="preserve">
+    <value>Password &lt; 2015</value>
+  </data>
+  <data name="ButtonValidateExport" xml:space="preserve">
+    <value>Valida Export</value>
+  </data>
+  <data name="LicenseId" xml:space="preserve">
+    <value>ID Licenza</value>
+  </data>
+  <data name="Article" xml:space="preserve">
+    <value>Articolo</value>
+  </data>
+  <data name="ExpRange" xml:space="preserve">
+    <value>ExpRange</value>
+  </data>
+  <data name="info" xml:space="preserve">
+    <value>Visualizzato _START_ a _END_ di _TOTAL_ elementi</value>
+  </data>
+  <data name="infofiltered" xml:space="preserve">
+    <value>(filtrati da _MAX_ elementi in totale)</value>
+  </data>
+  <data name="lengthmenu" xml:space="preserve">
+    <value>Visualizza _MENU_ elementi</value>
+  </data>
+  <data name="MachineID" xml:space="preserve">
+    <value>ID Macchina</value>
+  </data>
+  <data name="MED" xml:space="preserve">
+    <value>MED</value>
+  </data>
+  <data name="Next" xml:space="preserve">
+    <value>Successivo</value>
+  </data>
+  <data name="noRowsSelected" xml:space="preserve">
+    <value>Clicca sulla riga per selezionarla</value>
+  </data>
+  <data name="Previous" xml:space="preserve">
+    <value>Precedente</value>
+  </data>
+  <data name="Quantity" xml:space="preserve">
+    <value>Quantità</value>
+  </data>
+  <data name="rowsSelected" xml:space="preserve">
+    <value>1 riga selezionata</value>
+  </data>
+  <data name="Search" xml:space="preserve">
+    <value>Ricerca</value>
+  </data>
+  <data name="Select" xml:space="preserve">
+    <value>Seleziona</value>
+  </data>
+  <data name="Type" xml:space="preserve">
+    <value>Tipo</value>
+  </data>
+  <data name="Version" xml:space="preserve">
+    <value>Versione</value>
+  </data>
 </root>
