--- a/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
+++ b/DPTnew/DPTnew/Localization/Resource.ja-JP.resx
@@ -510,4 +510,76 @@
   <data name="View_Menu_Orders" xml:space="preserve">
     <value>その他</value>
   </data>
+  <data name="AccountName" xml:space="preserve">
+    <value>アカウント名</value>
+  </data>
+  <data name="AccountNumber" xml:space="preserve">
+    <value>アカウント番号</value>
+  </data>
+  <data name="Article" xml:space="preserve">
+    <value>種別</value>
+  </data>
+  <data name="ButtonExport" xml:space="preserve">
+    <value>エクスポート</value>
+  </data>
+  <data name="ButtonInstall2015" xml:space="preserve">
+    <value>インストール 2015</value>
+  </data>
+  <data name="ButtonInstallMin2015" xml:space="preserve">
+    <value>インストール &lt; 2015</value>
+  </data>
+  <data name="ButtonPasswordMin2015" xml:space="preserve">
+    <value>パスワード &lt; 2015</value>
+  </data>
+  <data name="ButtonValidateExport" xml:space="preserve">
+    <value>エクスポート検証</value>
+  </data>
+  <data name="ExpRange" xml:space="preserve">
+    <value>更新範囲</value>
+  </data>
+  <data name="info" xml:space="preserve">
+    <value>表示 _START_ から _END_ 全 _TOTAL_ 項目中</value>
+  </data>
+  <data name="infofiltered" xml:space="preserve">
+    <value>(filtered from _MAX_ total 項目中)</value>
+  </data>
+  <data name="lengthmenu" xml:space="preserve">
+    <value>表示 _MENU_ 	項目</value>
+  </data>
+  <data name="LicenseId" xml:space="preserve">
+    <value>ライセンスＩＤ</value>
+  </data>
+  <data name="MachineID" xml:space="preserve">
+    <value>マシンＩＤ</value>
+  </data>
+  <data name="MED" xml:space="preserve">
+    <value>終了日</value>
+  </data>
+  <data name="Next" xml:space="preserve">
+    <value>次</value>
+  </data>
+  <data name="noRowsSelected" xml:space="preserve">
+    <value>Click a row to select it</value>
+  </data>
+  <data name="Previous" xml:space="preserve">
+    <value>前</value>
+  </data>
+  <data name="Quantity" xml:space="preserve">
+    <value>数</value>
+  </data>
+  <data name="rowsSelected" xml:space="preserve">
+    <value>1 行選択</value>
+  </data>
+  <data name="Search" xml:space="preserve">
+    <value>Search</value>
+  </data>
+  <data name="Select" xml:space="preserve">
+    <value>選択</value>
+  </data>
+  <data name="Type" xml:space="preserve">
+    <value>タイプ</value>
+  </data>
+  <data name="Version" xml:space="preserve">
+    <value>バージョン</value>
+  </data>
 </root>
