--- a/DPTnew/DPTnew/Localization/Resource.resx
+++ b/DPTnew/DPTnew/Localization/Resource.resx
@@ -510,4 +510,76 @@
   <data name="View_Home_NewLicensingLink" xml:space="preserve">
     <value>http://www.think3.eu/images/pdf/Licenses.pdf</value>
   </data>
+  <data name="AccountName" xml:space="preserve">
+    <value>Account Name</value>
+  </data>
+  <data name="AccountNumber" xml:space="preserve">
+    <value>Account #</value>
+  </data>
+  <data name="Article" xml:space="preserve">
+    <value>Article</value>
+  </data>
+  <data name="ButtonExport" xml:space="preserve">
+    <value>Export</value>
+  </data>
+  <data name="ButtonInstall2015" xml:space="preserve">
+    <value>Install 2015</value>
+  </data>
+  <data name="ButtonInstallMin2015" xml:space="preserve">
+    <value>Install &lt; 2015</value>
+  </data>
+  <data name="ButtonPasswordMin2015" xml:space="preserve">
+    <value>Password &lt; 2015</value>
+  </data>
+  <data name="ButtonValidateExport" xml:space="preserve">
+    <value>Validate Export</value>
+  </data>
+  <data name="ExpRange" xml:space="preserve">
+    <value>ExpRange</value>
+  </data>
+  <data name="info" xml:space="preserve">
+    <value>Showing _START_ to _END_ of _TOTAL_ entries</value>
+  </data>
+  <data name="infofiltered" xml:space="preserve">
+    <value>(filtered from _MAX_ total entries)</value>
+  </data>
+  <data name="lengthmenu" xml:space="preserve">
+    <value>Show _MENU_ entries</value>
+  </data>
+  <data name="LicenseId" xml:space="preserve">
+    <value>License ID</value>
+  </data>
+  <data name="MachineID" xml:space="preserve">
+    <value>MachineID</value>
+  </data>
+  <data name="MED" xml:space="preserve">
+    <value>MED</value>
+  </data>
+  <data name="Next" xml:space="preserve">
+    <value>Next</value>
+  </data>
+  <data name="noRowsSelected" xml:space="preserve">
+    <value>Click a row to select it</value>
+  </data>
+  <data name="Previous" xml:space="preserve">
+    <value>Previous</value>
+  </data>
+  <data name="Quantity" xml:space="preserve">
+    <value>Quantity</value>
+  </data>
+  <data name="rowsSelected" xml:space="preserve">
+    <value>1 row selected</value>
+  </data>
+  <data name="Search" xml:space="preserve">
+    <value>Search</value>
+  </data>
+  <data name="Select" xml:space="preserve">
+    <value>Select</value>
+  </data>
+  <data name="Type" xml:space="preserve">
+    <value>Type</value>
+  </data>
+  <data name="Version" xml:space="preserve">
+    <value>Version</value>
+  </data>
 </root>
